// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCard Renders default (vertical) non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 8px 4px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-5 svg {
  fill: #09111C;
}

.emotion-6 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #2E3F54;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="emotion-4"
          >
            <h3
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Vertical Card
            </h3>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #DEE2E5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 8px 16px 0 rgba(10,10,10,0.08);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-4 .nk-headline-kicker {
  color: #3358CC;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #6454E3;
}

.emotion-4 .nk-headline-heading {
  color: #09111C;
}

.emotion-4 .nk-headline-heading svg {
  fill: #09111C;
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-6 svg {
  fill: #09111C;
}

.emotion-7 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-7 svg {
  fill: #2E3F54;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="emotion-5"
            >
              <h3
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h3>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px 4px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-5 svg {
  fill: #09111C;
}

.emotion-6 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #2E3F54;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="emotion-4"
          >
            <h3
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Horizontal Card
            </h3>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders vertical interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #DEE2E5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0 8px 16px 0 rgba(10,10,10,0.08);
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-4 .nk-headline-kicker {
  color: #3358CC;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #6454E3;
}

.emotion-4 .nk-headline-heading {
  color: #09111C;
}

.emotion-4 .nk-headline-heading svg {
  fill: #09111C;
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: "Poppins",sans-serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-6 svg {
  fill: #09111C;
}

.emotion-7 {
  margin: 0;
  color: #2E3F54;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-7 svg {
  fill: #2E3F54;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="emotion-5"
            >
              <h3
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h3>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
